Fixing `./gradlew ktlintFormat`